--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "fxd"
 version = "0.1.0"
-authors = ["jiangzhe <zhe.jiang@transwarp.io>"]
-edition = "2018"
+authors = ["jiangzhe <nju.jiangzhe@gmail.com>"]
+edition = "2021"
+license = "MIT OR Apache-2.0"
+description = "Fixed-point decimal implementation"
+keywords = ["decimal"]
+categories = ["data-structures"]
+repository = "https://github.com/jiangzhe/fxd-rs/"
+readme = "README.md"
 
 [profile.release]
 
@@ -17,3 +23,4 @@ thiserror = "1.0"
 criterion = "0.3"
 rand = "0.8.4"
 pprof = { version = "0.3", features = ["flamegraph"]}
+
